fix:text-alignment issue

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h1{
     text-shadow: 1px 1px 2px powderblue;
 }
 p{
+    text-align: center;
     font-family: "Frijole";
     color: antiquewhite;
 }
